[package]
authors = ["Jens Getreu <getreu@web.de>"]
name = "sanitize-filename-reader-friendly"
version = "2.3.0"
edition = "2024"
keywords = ["filename", "sanitizer"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/sanitize-filename-reader-friendly"
homepage = "https://gitlab.com/getreu/sanitize-filename-reader-friendly"
description = "A filename sanitizer aiming to produce reader friendly filenames."

[dependencies]
const_format = "0.2.34"
